--- a/sign-in/Sign.css
+++ b/sign-in/Sign.css
@@ -13,42 +13,74 @@
 }
 
 .btn-head{
-    margin-left: 150px;
+    margin-left: 200px;
+    width: 100px;
+    margin-top: 25px;
+    border-radius: 15px;
+    padding: 10px;
+    font-size: 15px;
 }
 
 .btn-foot{
-    margin-left: 1655px;
     margin-top: 50px;
 }
 
 
 .start-up{
-    background-color: blue;
     font: 1em sans-serif;
     text-indent: 10%;
+    color: white;
+    font-weight: bold;
     
 }
 
 .form-fill{
     padding: 15px;
-    margin-left: 1200px;
     width: 350px;
     border-radius: 50px;
-    margin-bottom: 65px;
+    margin-bottom: 40px;
     margin-top: 50px;
     
 }
 
+.column1{
+    background-image: url(assets/Group\ 15.png);
+    background-size:400px ; 
+    background-repeat: no-repeat;
+    background-color: blue;
+    border-bottom-right-radius: 100px;
+    border-top-right-radius: 100px;
+    background-position: 75% 75%;
+}
+
 .column2{
-    margin-right
+ margin-left: 100px;
+ font-size: 30px;
+
 }
 
 .Sign-In{
-    width: 15px;
+    width: 150px;
     border-radius: 30px;
     padding: 15px;
+    margin-left: 120px;
 
 }
 
+.Socials{
+    margin-top: 20px;
+    font-size: large;
+    margin-left: 70px;
+    font-weight: bold;
+}
+.footer{
+    background-image: url(assets/Path\ 25.png);
+    border: 4px soild black;
+}
+
+.main{
+    margin-left: 125px;
+    
+}
 
 
